fix(model): make validation deterministic and guard the read boundary
- resolve a property across every type of the entity instead of pre-merging
  a salt-randomised flattened map, and sort the type names in every message
- break the ancestor tie by name when two ancestors declare a property, and
  keep the ontology file's order for ancestors and required
- reject a null document, a null value list and a null value in parse
- report an abstract type only when none of the entity's types is concrete
- reject a null id, types or properties in ModelEntity
- refuse statements from two different models in ModelEntity.from
- normalise a null sheet to "" and reject a NUL in any statement id component
- replace IllegalStateException with UnreadableModelResource, and the
  registry's bare IllegalArgumentException with UnknownTargetModel
- bundle the upstream MIT LICENSE and pin the vendored ontology's provenance